# profile

./: README.md  pyproject.toml
.github/workflows/: ci.yml  cla.yml
examples/: example.py
profile/: __init__.py  cli.py  profiler.py
template/: module1.py
tests/: test_profiler.py  test_with_pytest.py  test_with_unittest.py
ultralytics_profile/: cli.py  profiler.py
