[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profile"
dynamic = ["version"]
description = "A tool for profiling any Python code or command"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["profiling", "performance", "python"]
authors = [
    { name = "Glenn Jocher", email = "glenn@ultralytics.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
]

[project.urls]
"Homepage" = "https://github.com/ultralytics/profile"
"Source" = "https://github.com/ultralytics/profile"
"Bug Reports" = "https://github.com/ultralytics/profile/issues"

[project.scripts]
profile = "profile.cli:main"

[tool.setuptools]
packages = { find = { where = ["."], include = ["profile", "profile.*"] } }

[tool.setuptools.dynamic]
version = { attr = "profile.__version__" }

[tool.pytest.ini_options]
addopts = "--doctest-modules --durations=30 --color=yes"
norecursedirs = [".git", "dist", "build"]

[tool.ruff]
line-length = 120
